fix(): Lighter dark mode.

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -37,26 +37,26 @@
 
 :root [data-theme="dark"] {
   color-scheme: dark;
-  --background-sunk: 240 10% 2%;
-  --background: 240 5.9% 8%;
-  --foreground: 0 0% 98%;
-  --card: 240 5.9% 8%;
-  --card-foreground: 0 0% 98%;
-  --popover: 240 5.9% 8%;
-  --popover-foreground: 0 0% 98%;
-  --primary: 0 0% 98%;
-  --primary-foreground: 240 5.9% 8%;
+  --background-sunk: 240 10% 10%;
+  --background: 240 3.7% 15.9%;
+  --foreground: 0 0% 100%;
+  --card: 240 3.7% 15.9%;
+  --card-foreground: 0 0% 100%;
+  --popover: 240 3.7% 15.9%;
+  --popover-foreground: 0 0% 100%;
+  --primary: 0 0% 100%;
+  --primary-foreground: 240 3.7% 15.9%;
   --secondary: 240 3.7% 15.9%;
-  --secondary-foreground: 0 0% 98%;
-  --muted: 240 3.7% 15.9%;
-  --muted-foreground: 240 5% 64.9%;
-  --accent: 240 3.7% 15.9%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 240 5.3% 26.1%;
+  --muted-foreground: 240 4.9% 83.9%;
+  --accent: 240 5.3% 26.1%;
   --accent-foreground: 0 0% 98%;
   --destructive: 0 62.8% 30.6%;
-  --destructive-foreground: 0 0% 98%;
-  --border: 240 3.7% 19.9%;
-  --input: 240 3.7% 19.9%;
-  --ring: 240 4.9% 83.9%;
+  --destructive-foreground: 0 0% 100%;
+  --border: 240 5.3% 26.1%;
+  --input: 240 5.3% 26.1%;
+  --ring: 240 5.9% 90%;
   --chart-1: 220 70% 50%;
   --chart-2: 160 60% 45%;
   --chart-3: 30 80% 55%;
